# JRTPLib

./: .gitmodules
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/io/github/gaomjun/jrtplib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jrtplib-jni.cpp  native-lib.cpp
app/src/main/java/io/github/gaomjun/jrtplib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/gaomjun/jrtplib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
